--- a/produk.html
+++ b/produk.html
@@ -125,7 +125,7 @@
             console.log("Nilai Kopi Diganti ke " + dipilih)
             /* Kode selanjutnya paste di bawah sini jangan lewat } */
 
-            $.getJSON(sumber).then(function (data) {
+            $.getJSON(sumber2).then(function (data) {
                 var data_kopi = data[dipilih]
                 console.log(data_kopi)
                 /* Kode ketiga paste di bawah sini jangan lewat }) */
