--- a/produk.html
+++ b/produk.html
@@ -118,7 +118,7 @@
     <script>
         /* Tulis Javascript Di bawah Sini */
         var sumber = "https://rikikurnia.com/prakerja/api/kopi"
-        var sumber2 = "data.jshon"
+        var sumber2 = "data.json"
 
         select_kopi.onchange = function () {
             var dipilih = select_kopi.value
