--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p>Instagram: @kopi.kuy </p>
         </div>
     </section>
-
+<footer>
     <div class="navigasi">
         <a href="#best-seller">Best Seller</a>
         <a href="#our-team">Our Team</a>
@@ -203,6 +203,7 @@
         dan setiap section harus setelah kode </section>
         jangan menulis <section> di dalam <section>
     -->
+    </footer>
 </body>
 
 </html>
