--- a/produk.html
+++ b/produk.html
@@ -312,7 +312,7 @@
         function fetchData(dipilih) {
             showLoadingFetchData();
             if (dipilih === "semua") {
-                $.getJSON(sumber2)).then(function (
+                $.getJSON(sumber2).then(function (
                     dataSumber2
                 ) {
                     selectedData = [
